Add tests for top_media helper model method

--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -20,3 +20,66 @@ waking_ned:
   creator: Kirk Jones
   publication_year: 1998
   description: A funny movie.
+
+the_rising:
+  category: movie
+  title: Tiger & Bunny - The Rising
+  creator: Sunrise
+  publication_year: 2014
+  description: Super shenanigans
+
+mulan:
+  category: movie
+  title: Mulan
+  creator: Tony Bancroft, Barry Cook
+  publication_year: 1998
+  description: She's the only Disney Princess with a body count
+
+kiki:
+  category: movie
+  title: Kiki's Delivery Service
+  creator: Hayao Miyazaki
+  publication_year: 1989
+  description: brooms and cats are cool
+
+book_of_life:
+  category: movie
+  title: The Book of Life
+  creator: Jorge Gutierrez
+  publication_year: 2014
+  description: Jukebox musical with puppets
+
+pan:
+  category: movie
+  title: Pan's Labyrinth
+  creator: Guillermo del Toro
+  publication_year: 2006
+  description: NA
+
+twelve_monkeys:
+  category: movie
+  title: Twelve Monkeys
+  creator: Terry Gilliam
+  publication_year: 1995
+  description: Time travel tho
+
+star_trek_2009:
+  category: movie
+  title: Star Trek
+  creator: J.J. Abrams
+  publication_year: 2009
+  description: Made a lot of people mad
+
+the_beginning:
+  category: movie
+  title: Tiger and Bunny - The Beginning
+  creator: Sunrise
+  publication_year: 2012
+  description: How it started
+
+infinity_war:
+  category: movie
+  title: The Avengers - Infinity War
+  creator: Disney
+  publication_year: 2018
+  description: Mr. Stark I don't feel so good
